# polislike-opinion-map-painting

./: .editorconfig  .gitattributes  .gitignore  README.md  app.js  datasets.json  generate.py  index.html  jest.config.js  jest.setup.js  mobile-test.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  scratch.js  styles.css  texture-test.html
.github/workflows/: hourly-dataset-update.yml  test.yml
data/: datasets.json
data/aufstehen-de-4uf4hkunf3/: localmap.json  meta.json  pacmap.json  statements.json
data/bg2050/: localmap.json  pacmap.json  pca.json
data/cardano-nft/: meta.json  pacmap.json  statements.json  votes.db
data/datasets/5-dimensions-scaling-delib/: labels.hdbscan.localmap.json  labels.hdbscan.pacmap.json  labels.hdbscan.pca.json  labels.kmeans.localmap.json  labels.kmeans.pacmap.json  labels.kmeans.pca.json  localmap.json  meta.json  pacmap.json  pca.json  statements.json  votes.db
data/datasets/5r7cbwb9cv/: localmap.json  meta.json  pacmap.json  pca.json  votes.db
data/datasets/7sr92cbewf/: localmap.json  meta.json  pacmap.json  pca.json  votes.db
data/datasets/auckland-7sr92cbewf/: statements.json
data/datasets/audrey-doc/: localmap.json  meta.json  pacmap.json  pca.json  (+2 more)
data/demdis-eu-9usurb2mmh/: meta.json  votes.db
data/dna-embryo-mod/: pca.json
data/jean-lou/: localmap.json  pacmap.json  pca.json
data/vtaiwan-uber/: meta.json  pca.json
js/: config.js  data.js  main.js  ui.js
js/__tests__/: config.test.js  data-test-module.js  data-wrapper.js  data.test.js  main.test.js
scripts/: check-coverage.sh
(+238 files in other folders)
